--- a/tool.html
+++ b/tool.html
@@ -197,6 +197,10 @@
                 alert("初始顆數必須大於最終顆數");
                 return;
             }
+            if (isNaN(startCount)) {
+                alert("請輸入起始顆數。");
+                return;
+            }
             if (isNaN(endCount)) {
                 alert("請輸入最終顆數。");
                 return;
