--- a/tool.html
+++ b/tool.html
@@ -220,6 +220,7 @@
                 serverStats = originalServerStats; // 恢復數據
                 updateStatsTable(); // 更新
                 updateLocalStorage(); // 更新
+                updateStartCount();
             }
         }
 
